@@ -44,12 +44,14 @@ Output a verbose description of time intervals.
 For each
 .I timezone
 on the command line,
-print the time at the lowest possible time value,
-the time one day after the lowest possible time value,
+print the times at the two extreme time values,
+the times (if present) at and just beyond the boundaries of years that
+.BR localtime (3)
+and
+.BR gmtime (3)
+can represent, and
 the times both one second before and exactly at
-each detected time discontinuity,
-the time at one day less than the highest possible time value,
-and the time at the highest possible time value.
+each detected time discontinuity.
 Each line is followed by
 .BI isdst= D
 where
@@ -66,7 +68,7 @@ seconds east of Greenwich.
 .B \*-V
 Like
 .BR \*-v ,
-except omit the times relative to the extreme time values.
+except omit output concerning extreme time and year values.
 This generates output that is easier to compare to that of
 implementations with different time representations.
 .TP
@@ -200,7 +202,8 @@ This time zone is east of UT, so its UT offsets are positive.  Also,
 many of its time zone abbreviations are omitted since they duplicate
 the text of the UT offset.
 .SH LIMITATIONS
-Time discontinuities are found by sampling the results returned by localtime
+Time discontinuities are found by sampling the results returned by
+.BR localtime (3)
 at twelve-hour intervals.
 This works in all real-world cases;
 one can construct artificial time zones for which this fails.
