@@ -90,6 +90,11 @@ Unreleased, experimental changes
     seconds on the rare platforms where time_t counts leap seconds,
     fixing a bug introduced in 2014g.
 
+    zdump -v now outputs timestamps at boundaries of what localtime
+    and gmtime can represent, instead of the less-useful timestamps
+    one hour after the minimum and one hour before the maximum.
+    (Thanks to Arthur David Olson for prototype code.)
+
     zdump's -c and -t options are now consistently inclusive for the
     lower time bound and exclusive for the upper.  Formerly they were
     inconsistent.  (Confusion noted by Martin Burnicki.)
